infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  # how to find all the pods we create
  selector:
    matchLabels:
      app: auth
  # how to create each invidual pod this deployment will create
  template:
    metadata:
      labels:
        app: auth #should match the selector matchLabels
    spec:
      containers:
        - name: auth
          image: darknessofmyth/astro-auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
